--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   },
   "dependencies": {
     "firebase": "^12.1.0",
+    "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.8.1",
     "react-scripts": "^5.0.1"
   },
   "browserslist": {
