--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "chart.js": "^4.5.0",
     "firebase": "^12.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.1",
